--- a/blog.html
+++ b/blog.html
@@ -368,10 +368,10 @@ Car Care Industry">
                 slidesPerView: 1,
                 loop: true,
                 speed: 1000,
-                // autoplay: {
-                //     delay: 4000,
-                //     disableOnInteraction: false,
-                // },
+                autoplay: {
+                    delay: 4000,
+                    disableOnInteraction: false,
+                },
                 spaceBetween: 0,
                 pagination: {
                     el: ".swiper-pagination",
