--- a/about-us.html
+++ b/about-us.html
@@ -892,15 +892,15 @@
                         </div>
                         <div class="w-full relative">
                             <div class="grid lg:grid-cols-2 md:grid-cols-2 grid-cols-2 gap-3">
-                                <div class="w-full relative overflow-hidden group duration-300 md:h-[26.063rem] h-full">
+                                <div class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full">
                                     <img fetchpriority="low" loading="lazy" src="img/customer_convenience.webp"
                                         alt="Customer Convenience" title="Customer Convenience"
                                         class="size-full object-cover">
 
 
-                                    <div class="absolute bottom-14 left-0 flex flex-col gap-y-3">
+                                    <div class="absolute bottom-14 left-0 flex flex-col gap-y-3 duration-500">
                                         <div
-                                            class="w-max pr-3 duration-300 translate-y-0 group-hover:lg:-translate-y-4">
+                                            class="w-max pr-3 duration-500 translate-y-0 group-hover:lg:-translate-y-4">
                                             <h4
                                                 class="text-white lg:text-xl md:text-lg text-base text-xs font-bold px-5 h-12 flex justify-start items-center bg-gradient-to-l from-[#CB122D] to-[#650916] group-hover:lg:from-[#000] group-hover:lg:to-[#000] duration-300 origin-top -skew-x-[16deg] ">
                                                 <div class="skew-x-[16deg] ">
@@ -909,7 +909,7 @@
 
                                             </h4>
                                         </div>
-                                        <p class="px-4 lg:hidden group-hover:lg:block text-white md:text-base text-sm duration-300 
+                                        <p class="px-4 lg:hidden group-hover:lg:block text-white md:text-base text-sm duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Placeat
                                             repudiandae ex corporis ipsum id, quibusdam assumenda ipsam maxime.
@@ -918,10 +918,10 @@
 
                                     </div>
                                     <div
-                                        class="lg:hidden group-hover:lg:block duration-300 absolute bottom-0 left-0 w-full h-1/4 bg-gradient-to-t from-[#CB122D] to-[#CB122D00]">
+                                        class="lg:hidden group-hover:lg:block duration-500 absolute bottom-0 left-0 w-full h-1/4 bg-gradient-to-t from-[#CB122D] to-[#CB122D00]">
                                     </div>
                                 </div>
-                                <div class="w-full relative overflow-hidden group duration-300 md:h-[26.063rem] h-full">
+                                <div class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full">
                                     <img fetchpriority="low" loading="lazy" src="img/trusted_reputation.webp"
                                         alt="Trusted Reputation" title="Trusted Reputation"
                                         class="size-full object-cover">
@@ -929,16 +929,16 @@
 
                                     <div class="absolute bottom-14 left-0 flex flex-col gap-y-3">
                                         <div
-                                            class="w-max pr-3 duration-300 translate-y-0 group-hover:lg:-translate-y-4">
+                                            class="w-max pr-3 duration-500 translate-y-0 group-hover:lg:-translate-y-4">
                                             <h4
-                                                class="text-white lg:text-xl md:text-lg text-base text-xs font-bold px-5 h-12 flex justify-start items-center bg-gradient-to-l from-[#CB122D] to-[#650916] group-hover:lg:from-[#000] group-hover:lg:to-[#000] duration-300 origin-top -skew-x-[16deg] ">
+                                                class="text-white lg:text-xl md:text-lg text-base text-xs font-bold px-5 h-12 flex justify-start items-center bg-gradient-to-l from-[#CB122D] to-[#650916] group-hover:lg:from-[#000] group-hover:lg:to-[#000] duration-500 origin-top -skew-x-[16deg] ">
                                                 <div class="skew-x-[16deg] ">
                                                     Trusted Reputation
                                                 </div>
 
                                             </h4>
                                         </div>
-                                        <p class="px-4 lg:hidden group-hover:lg:block text-white md:text-base text-sm duration-300 
+                                        <p class="px-4 lg:hidden group-hover:lg:block text-white md:text-base text-sm duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                             Lorem ipsum dolor sit amet,
                                             consectetur adipisicing elit. Placeat
@@ -947,10 +947,10 @@
 
                                     </div>
                                     <div
-                                        class="lg:hidden group-hover:lg:block duration-300 absolute bottom-0 left-0 w-full h-1/4 bg-gradient-to-t from-[#CB122D] to-[#CB122D00]">
+                                        class="lg:hidden group-hover:lg:block duration-500 absolute bottom-0 left-0 w-full h-1/4 bg-gradient-to-t from-[#CB122D] to-[#CB122D00]">
                                     </div>
                                 </div>
-                                <div class="w-full relative overflow-hidden group duration-300 md:h-[26.063rem] h-full">
+                                <div class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full">
                                     <img fetchpriority="low" loading="lazy" src="img/clear_communication.webp"
                                         alt="Clear Communication" title="Clear Communication"
                                         class="size-full object-cover">
@@ -958,16 +958,16 @@
 
                                     <div class="absolute bottom-14 left-0 flex flex-col gap-y-3">
                                         <div
-                                            class="w-max pr-3 duration-300 translate-y-0 group-hover:lg:-translate-y-4">
+                                            class="w-max pr-3 duration-500 translate-y-0 group-hover:lg:-translate-y-4">
                                             <h4
-                                                class="text-white lg:text-xl md:text-lg text-base text-xs font-bold px-5 h-12 flex justify-start items-center bg-gradient-to-l from-[#CB122D] to-[#650916] group-hover:lg:from-[#000] group-hover:lg:to-[#000] duration-300 origin-top -skew-x-[16deg] ">
+                                                class="text-white lg:text-xl md:text-lg text-base text-xs font-bold px-5 h-12 flex justify-start items-center bg-gradient-to-l from-[#CB122D] to-[#650916] group-hover:lg:from-[#000] group-hover:lg:to-[#000] duration-500 origin-top -skew-x-[16deg] ">
                                                 <div class="skew-x-[16deg] ">
                                                     Clear Communication
                                                 </div>
 
                                             </h4>
                                         </div>
-                                        <p class="px-4 lg:hidden group-hover:lg:block text-white md:text-base text-sm duration-300 
+                                        <p class="px-4 lg:hidden group-hover:lg:block text-white md:text-base text-sm duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                             Lorem ipsum dolor sit amet,
                                             consectetur adipisicing elit. Placeat
@@ -976,26 +976,26 @@
 
                                     </div>
                                     <div
-                                        class="lg:hidden group-hover:lg:block duration-300 absolute bottom-0 left-0 w-full h-1/4 bg-gradient-to-t from-[#CB122D] to-[#CB122D00]">
+                                        class="lg:hidden group-hover:lg:block duration-500 absolute bottom-0 left-0 w-full h-1/4 bg-gradient-to-t from-[#CB122D] to-[#CB122D00]">
                                     </div>
                                 </div>
-                                <div class="w-full relative overflow-hidden group duration-300 md:h-[26.063rem] h-full">
+                                <div class="w-full relative overflow-hidden group duration-500 md:h-[26.063rem] h-full">
                                     <img fetchpriority="low" loading="lazy" src="img/honest_pricing.webp"
                                         alt="Honest Pricing" title="Honest Pricing" class="size-full object-cover">
 
 
                                     <div class="absolute bottom-14 left-0 flex flex-col gap-y-3">
                                         <div
-                                            class="w-max pr-3 duration-300 translate-y-0 group-hover:lg:-translate-y-4">
+                                            class="w-max pr-3 duration-500 translate-y-0 group-hover:lg:-translate-y-4">
                                             <h4
-                                                class="text-white lg:text-xl md:text-lg text-base text-xs font-bold px-5 h-12 flex justify-start items-center bg-gradient-to-l from-[#CB122D] to-[#650916] group-hover:lg:from-[#000] group-hover:lg:to-[#000] duration-300 origin-top -skew-x-[16deg] ">
+                                                class="text-white lg:text-xl md:text-lg text-base text-xs font-bold px-5 h-12 flex justify-start items-center bg-gradient-to-l from-[#CB122D] to-[#650916] group-hover:lg:from-[#000] group-hover:lg:to-[#000] duration-500 origin-top -skew-x-[16deg] ">
                                                 <div class="skew-x-[16deg] ">
                                                     Honest Pricing
                                                 </div>
 
                                             </h4>
                                         </div>
-                                        <p class="px-4 lg:hidden group-hover:lg:block text-white md:text-base text-sm duration-300 
+                                        <p class="px-4 lg:hidden group-hover:lg:block text-white md:text-base text-sm duration-500 
           drop-shadow-[3px_3px_10px_rgba(0,0,0,0.9)]">
                                             Lorem ipsum dolor sit amet,
                                             consectetur adipisicing elit. Placeat
@@ -1004,7 +1004,7 @@
 
                                     </div>
                                     <div
-                                        class="lg:hidden group-hover:lg:block duration-300 absolute bottom-0 left-0 w-full h-1/4 bg-gradient-to-t from-[#CB122D] to-[#CB122D00]">
+                                        class="lg:hidden group-hover:lg:block duration-500 absolute bottom-0 left-0 w-full h-1/4 bg-gradient-to-t from-[#CB122D] to-[#CB122D00]">
                                     </div>
                                 </div>
 
