--- a/locate-us.html
+++ b/locate-us.html
@@ -147,7 +147,7 @@
                                 <option>Bengaluru</option>
                             </select>
 
-                            <svg class="pointer-events-none absolute right-8 top-1/2 h-4 w-4 -translate-y-1/2 text-[#000000]"
+                            <svg class="pointer-events-none absolute right-8 top-1/2 size-6 -translate-y-1/2 text-[#000000]"
                                 xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                 stroke-width="2" aria-hidden="true">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
