--- a/about-us.html
+++ b/about-us.html
@@ -1170,13 +1170,13 @@
         document.addEventListener("DOMContentLoaded", function () {
             const swiper = new Swiper(".featureSwiper", {
                 speed: 3000,
-                // autoplay: {
-                //     delay: 3000,
-                //     disableOnInteraction: false,
-                // },
+                autoplay: {
+                    delay: 3000,
+                    disableOnInteraction: false,
+                },
                 spaceBetween: 40,
                 loop: true,
-                autoHeight: true,
+                // autoHeight: true,
                 centeredSlides: true,
                 pagination: {
                     el: ".swiper-pagination",
