web iissue fixed

--- a/blog-item.html
+++ b/blog-item.html
@@ -24,14 +24,14 @@
                         The Ugly Truth About Car Service Prices – And How Petromin Express Is Changing the Game in India
                     </h1>
 
-                    <p class="text-[#3B3C4A] font-normal leading-8 lg:text-lg md:text-base text-sm">
+                    <p class="text-[#3B3C4A] font-normal leading-8 lg:text-xl md:text-lg text-sm">
                         For years, car owners have been paying more than they should for routine maintenance and
                         repairs.
                         The hidden reality? Traditional car service centers inflate costs with unnecessary overheads,
                         leaving customers frustrated and overcharged. At Petromin Express India, we’re here to change
                         that.
                     </p>
-                    <div class="flex items-center gap-4 text-sm text-gray-500 ">
+                    <div class="flex items-center gap-4 text-sm text-gray-500 py-3">
                         <div class="flex items-center gap-3">
                             <div class="w-7 h-7 rounded-full  flex items-center justify-center text-gray-400">
                                 <img src="img/blog_person.webp" alt="person" class="w-full h-full">
@@ -59,7 +59,7 @@
                     <h2 class="text-[#181A2A] font-semibold lg:text-2xl text-xl">
                         The Hidden Costs of Traditional Car Service
                     </h2>
-                    <p class="text-[#3B3C4A] lg:text-lg md:text-base text-sm font-normal leading-8">
+                    <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
                         Ever wondered why your car service bill seems to skyrocket? The traditional service model is
                         built
                         on costly layers of personnel—service advisors, floor supervisors, parts managers—each adding
@@ -74,7 +74,7 @@
                     <span class="text-[#181A2A] font-semibold lg:text-2xl text-xl">
                         Petromin Express India: A Smarter, More Affordable Approach
                     </span>
-                    <p class="text-[#3B3C4A] lg:text-lg md:text-base text-sm font-normal leading-8">
+                    <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
                         At Petromin Express, we believe in cutting out the excess and focusing on what really
                         matters—delivering high-quality car service at a fair price to our customers. Our game-changing
                         Micro-Entrepreneurship Model eliminates unnecessary expenses while ensuring you get top-tier
@@ -83,12 +83,13 @@
                     </p>
                 </div>
                 <div class="w-full">
-                    <div class="grid md:grid-cols-2 gap-8">
-                        <div class="">
-                            <img src="img/blog_men.webp" alt="menimg" class="w-full h-full object-cover">
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div class="relative overflow-hidden rounded-xl">
+                            <img src="img/blog_men.webp" alt="blog img" title="blog img"
+                                class="w-full  h-full object-cover object-top md:h-[30rem]">
                         </div>
-                        <div class="space-y-5">
-                            <p class="text-[#3B3C4A] font-normal lg:text-lg md:text-base text-sm leading-8">
+                        <div class="space-y-8">
+                            <p class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base text-sm leading-8">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
                                 pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu
                                 aenean
@@ -131,7 +132,7 @@
                         <span class="text-[#181A2A] font-semibold md:text-2xl text-xl">
                             The Hidden Costs of Traditional Car Service
                         </span>
-                        <p class="text-[#3B3C4A] lg:text-lg md:text-base text-sm font-normal leading-8">
+                        <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
                             At Petromin Express, we believe in cutting out the excess and focusing on what really
                             matters—delivering high-quality car service at a fair price to our customers. Our
                             game-changing
@@ -140,12 +141,12 @@
                             from experienced professionals. Here’s what sets us apart:
                         </p>
                     </div>
-                    <div class=" grid md:grid-cols-2 gap-8">
-                        <div class="order-2">
-                            <img src="img/blog_men.webp" alt="menimg" class="w-full h-full object-cover">
+                    <div class="grid md:grid-cols-2 gap-8 items-center">
+                        <div class="order-2 overflow-hidden rounded-xl">
+                            <img src="img/blog_men.webp" alt="menimg" class="w-full md:h-[30rem] h-full object-cover">
                         </div>
-                        <div class="space-y-5 order-1">
-                            <p class="text-[#3B3C4A] font-normal lg:text-lg md:text-base text-sm leading-8">
+                        <div class="space-y-8 order-1">
+                            <p class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base text-sm leading-8">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
                                 pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu
                                 aenean
@@ -157,7 +158,7 @@
                                 sociosqu. Ad
                                 litora torquent per conubia nostra inceptos himenaeos.
                             </p>
-                            <p class="text-[#3B3C4A] font-normal lg:text-lg md:text-base text-sm leading-8">
+                            <p class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base text-sm leading-8">
                                 Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae
                                 pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu
                                 aenean
@@ -168,7 +169,7 @@
                                 malesuada lacinia integer nunc posuere.
 
                             </p>
-                            <p class="text-[#3B3C4A] font-normal lg:text-lg md:text-base text-sm leading-8">
+                            <p class="text-[#3B3C4A] font-normal lg:text-xl md:text-lg text-base text-sm leading-8">
                                 Iaculis massa nisl malesuada lacinia integer nunc posuere. Iaculis massa nisl malesuada
                                 lacinia
                                 integer nunc posuere.
@@ -180,7 +181,7 @@
                         <span class="text-[#181A2A] font-semibold lg:text-2xl text-xl">
                             Petromin Express India: A Smarter, More Affordable Approach
                         </span>
-                        <p class="text-[#3B3C4A] lg:text-lg md:text-base text-sm font-normal leading-8">
+                        <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
                             At Petromin Express, we believe in cutting out the excess and focusing on what really
                             matters—delivering high-quality car service at a fair price to our customers. Our
                             game-changing
@@ -198,7 +199,7 @@
                         <span class="text-[#181A2A] font-semibold lg:text-2xl text-xl">
                             The Hidden Costs of Traditional Car Service
                         </span>
-                        <p class="text-[#3B3C4A] lg:text-lg md:text-base text-sm font-normal leading-8">
+                        <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
                             Ever wondered why your car service bill seems to skyrocket? The traditional service model is
                             built
                             on costly layers of personnel—service advisors, floor supervisors, parts managers—each
@@ -216,7 +217,7 @@
                         <span class="text-[#181A2A] font-semibold lg:text-2xl text-xl">
                             Conclusion
                         </span>
-                        <p class="text-[#3B3C4A] lg:text-lg md:text-base text-sm font-normal leading-8">
+                        <p class="text-[#3B3C4A] lg:text-xl md:text-lg text-base text-sm font-normal leading-8">
                             At Petromin Express, we believe in cutting out the excess and focusing on what really
                             matters—delivering high-quality car service at a fair price to our customers. Our
                             game-changing
