--- a/news-room.html
+++ b/news-room.html
@@ -27,7 +27,8 @@
             <div
                 class="w-1/2 absolute lg:bottom-32 md:bottom-24 bottom-20  left-0 flex lg:py-8 py-5  px-8  bg-[linear-gradient(268.6deg,_#CB122D_0.16%,_#650916_100%)]  origin-top -skew-x-[18deg]">
                 <div class="view flex items-center justify-center skew-x-[18deg] pr-0">
-                    <h1 class="xl:text-6xl lg:text-5xl md:text-3xl text-lg text-white font-bold">Petromin Express,
+                    <h1 class="xl:text-6xl lg:text-5xl md:text-3xl text-lg text-white font-bold !leading-[4.5rem]">
+                        Petromin Express,
                         on the go.</h1>
                 </div>
             </div>
@@ -216,7 +217,7 @@ Car Care Industry">
                                                         stroke-linecap="round" stroke-linejoin="round" />
                                                 </svg></span>Download PDF</a>
                                     </div>
-                                    <div class="text-[#637083] md:tet-sm text-xs font-normal">August 20, 2025</div>
+                                    <div class="text-[#637083] md:text-sm text-xs font-normal">August 20, 2025</div>
                                 </div>
                             </div>
                             <div class="w-full border-b-2 border-[#E0E5EB] pb-6">
@@ -244,7 +245,7 @@ Car Care Industry">
                                                         stroke-linecap="round" stroke-linejoin="round" />
                                                 </svg></span>Download PDF</a>
                                     </div>
-                                    <div class="text-[#637083] md:tet-sm text-xs font-normal">August 20, 2025</div>
+                                    <div class="text-[#637083] md:text-sm text-xs font-normal">August 20, 2025</div>
                                 </div>
                             </div>
                             <div class="w-full border-b-2 border-[#E0E5EB] pb-6">
@@ -272,7 +273,7 @@ Car Care Industry">
                                                         stroke-linecap="round" stroke-linejoin="round" />
                                                 </svg></span>Download PDF</a>
                                     </div>
-                                    <div class="text-[#637083] md:tet-sm text-xs font-normal">August 20, 2025</div>
+                                    <div class="text-[#637083] md:text-sm text-xs font-normal">August 20, 2025</div>
                                 </div>
                             </div>
                         </div>
