--- a/blog.html
+++ b/blog.html
@@ -172,7 +172,7 @@
                     </div>
                 </div>
             </div>
-            <div class="view absolute h-full z-10 inset-0 w-full flex justify-center items-center">
+            <div class="view absolute h-full z-10 inset-0 w-full flex justify-center items-center translate-y-[-6rem]">
                 <div class="flex w-full items-center justify-between duration-150 ease-in-out">
                     <div class="swiper-prev cursor-pointer">
                         <span>
@@ -199,10 +199,10 @@
         </div>
     </section>
 
-    <section class="relative py-20">
-        <div class="view flex flex-col gap-y-8">
+    <section class="relative pt-28 pb-16">
+        <div class="view flex flex-col gap-y-10">
             <div class="grid md:grid-cols-3 grid-cols-1 gap-6">
-                <div class="relative w-full flex flex-col gap-y-3 group">
+                <div class="relative w-full flex flex-col gap-y-4 group">
                     <div class="w-full relative overflow-hidden duration-300">
                         <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
                             class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
@@ -229,7 +229,7 @@ Car Care Industry">
                         performance declines more quickly when you opt
                         for cheaper parts?
                     </p>
-                    <ul class="flex flex-wrap w-full items-center gap-3">
+                    <ul class="flex flex-wrap w-full items-center gap-3 pt-3">
                         <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Car Care &
                             Maintenance</li>
                         <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">Repairs & Services
@@ -239,44 +239,7 @@ Car Care Industry">
                     </ul>
                     <a href="#" aria-label="" class="absolute inset-0"></a>
                 </div>
-                <div class="relative w-full flex flex-col gap-y-3 group">
-                    <div class="w-full relative overflow-hidden duration-300">
-                        <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
-                            class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
-Car Care Industry" title="Petromin Express Revolutionizes
-Car Care Industry">
-                    </div>
-                    <div class="text-[#637083] font-normal lg:text-base text-sm">Author • August 20, 2025 • 2 Min Read
-                    </div>
-                    <div class="flex gap-2 items-baseline ">
-                        <h2
-                            class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
-                            Why Petromin Express uses only genuine parts</h2>
-                        <span>
-                            <svg class="size-5 group-hover:lg:text-[#D4111E] duration-300"
-                                xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 13 20"
-                                fill="currentColor">
-                                <path
-                                    d="M12.2789 9.69546L5.34274 19.3833H0L2 16.3833L6.5 9.69546L2 2.8833L0 0L5.34274 0L12.2789 9.69546Z"
-                                    fill="currentColor" />
-                            </svg>
-                        </span>
-                    </div>
-                    <p class="text-[#637083]  md:text-base text-sm font-normal">Ever noticed how your car’s
-                        performance declines more quickly when you opt
-                        for cheaper parts?
-                    </p>
-                    <ul class="flex flex-wrap w-full items-center gap-3">
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Car Care &
-                            Maintenance</li>
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">Repairs & Services
-                        </li>
-                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Industry Insights
-                        </li>
-                    </ul>
-                    <a href="#" aria-label="" class="absolute inset-0"></a>
-                </div>
-                <div class="relative w-full flex flex-col gap-y-3 group">
+                <div class="relative w-full flex flex-col gap-y-4 group">
                     <div class="w-full relative overflow-hidden duration-300">
                         <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
                             class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
@@ -292,7 +255,7 @@ Car Care Industry">
                         <span>
                             <svg class="size-5 group-hover:lg:text-[#D4111E] duration-300"
                                 xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 13 20"
-                                fill="currentColor">
+                                fill="none">
                                 <path
                                     d="M12.2789 9.69546L5.34274 19.3833H0L2 16.3833L6.5 9.69546L2 2.8833L0 0L5.34274 0L12.2789 9.69546Z"
                                     fill="currentColor" />
@@ -303,7 +266,44 @@ Car Care Industry">
                         performance declines more quickly when you opt
                         for cheaper parts?
                     </p>
-                    <ul class="flex flex-wrap w-full items-center gap-3">
+                    <ul class="flex flex-wrap w-full items-center gap-3 pt-3">
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Car Care &
+                            Maintenance</li>
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">Repairs & Services
+                        </li>
+                        <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Industry Insights
+                        </li>
+                    </ul>
+                    <a href="#" aria-label="" class="absolute inset-0"></a>
+                </div>
+                <div class="relative w-full flex flex-col gap-y-4 group">
+                    <div class="w-full relative overflow-hidden duration-300">
+                        <img fetchpriority="low" loading="lazy" src="img/media_mention_img.webp"
+                            class="size-full group-hover:lg:scale-125 duration-300" alt="Petromin Express Revolutionizes
+Car Care Industry" title="Petromin Express Revolutionizes
+Car Care Industry">
+                    </div>
+                    <div class="text-[#637083] font-normal lg:text-base text-sm">Author • August 20, 2025 • 2 Min Read
+                    </div>
+                    <div class="flex gap-2 items-baseline">
+                        <h2
+                            class="lg:text-xl md:text-lg text-base font-semibold text-[#121212] group-hover:lg:text-[#D4111E] duration-300">
+                            Why Petromin Express uses only genuine parts</h2>
+                        <span>
+                            <svg class="size-5 group-hover:lg:text-[#D4111E] duration-300"
+                                xmlns="http://www.w3.org/2000/svg" width="15" height="15" viewBox="0 0 13 20"
+                                fill="none">
+                                <path
+                                    d="M12.2789 9.69546L5.34274 19.3833H0L2 16.3833L6.5 9.69546L2 2.8833L0 0L5.34274 0L12.2789 9.69546Z"
+                                    fill="currentColor" />
+                            </svg>
+                        </span>
+                    </div>
+                    <p class="text-[#637083]  md:text-base text-sm font-normal">Ever noticed how your car’s
+                        performance declines more quickly when you opt
+                        for cheaper parts?
+                    </p>
+                    <ul class="flex flex-wrap w-full items-center gap-3 pt-3">
                         <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm"> Car Care &
                             Maintenance</li>
                         <li class="bg-[#FEF3E8] text-[#FF8300] p-3 font-medium md:text-base text-sm">Repairs & Services
@@ -368,10 +368,10 @@ Car Care Industry">
                 slidesPerView: 1,
                 loop: true,
                 speed: 1000,
-                autoplay: {
-                    delay: 4000,
-                    disableOnInteraction: false,
-                },
+                // autoplay: {
+                //     delay: 4000,
+                //     disableOnInteraction: false,
+                // },
                 spaceBetween: 0,
                 pagination: {
                     el: ".swiper-pagination",
